--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,84 +113,69 @@ jobs:
       - name: lint
         run: doit *:lint:*
 
-  # test:
-  #   needs: [build]
-  #   name: test ${{ matrix.os }} ${{ matrix.python-version }}
-  #   runs-on: ${{ matrix.os }}-latest
-  #   env:
-  #     TESTING_IN_CI: '1'
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       os: ['ubuntu', 'macos', 'windows']
-  #       python-version: ['3.7', '3.10']
-  #       include:
-  #         - python-version: '3.7'
-  #           clean-artifacts: 'whl'
-  #         - python-version: '3.10'
-  #           clean-artifacts: 'tar.gz'
+  test:
+    needs: [build]
+    name: test ${{ matrix.os }} ${{ matrix.lab-version }}
+    runs-on: ${{ matrix.os }}-latest
+    env:
+      TESTING_IN_CI: '1'
+      JLF_LAB: ${{ matrix.lab-version }}
 
-  #   steps:
-  #     - name: configure line endings
-  #       run: |
-  #         git config --global core.autocrlf false
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ['ubuntu', 'macos', 'windows']
+        lab-version: ['lab3.6', 'lab4.0']
+        include:
+          - os: ubuntu
+            subdir: linux-64
+          - os: macos
+            subdir: osx-64
+          - os: windows
+            subdir: win-64
 
-  #     - name: checkout
-  #       uses: actions/checkout@v3
+    steps:
+      - name: configure line endings
+        run: git config --global core.autocrlf false
 
-  #     - name: cache (conda)
-  #       uses: actions/cache@v3
-  #       with:
-  #         path: ~/conda_pkgs_dir
-  #         key: |
-  #           ${{ env.CACHE_EPOCH }}-${{ runner.os }}-conda-${{ matrix.python-version }}-${{ hashFiles('.github/environment.yml') }}
-  #         restore-keys: |
-  #           ${{ env.CACHE_EPOCH }}-${{ runner.os }}-conda-${{ matrix.python-version }}-
+      - name: checkout
+        uses: actions/checkout@v3
 
-  #     - name: install (conda)
-  #       uses: conda-incubator/setup-miniconda@v2
-  #       with:
-  #         miniforge-variant: Mambaforge
-  #         miniforge-version: 4.13.0-1
-  #         python-version: ${{ matrix.python-version }}
-  #         environment-file: .binder/environment.yml
-  #         use-only-tar-bz2: true
-  #         use-mamba: true
+      - name: install (conda)
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniforge-variant: Mambaforge
+          environment-file: .github/locks/lock_${{ matrix.subdir }}.conda.lock
+          use-mamba: true
 
-  #     - name: download (dist)
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: jupyterlab-fonts-${{ github.run_number }}-dist
-  #         path: ./dist
+      - name: download (preflight)
+        uses: actions/download-artifact@v3
+        with:
+          name: jupyterlab-fonts-${{ github.run_number }}-lock-preflight
+          path: ./build/locks
 
-  #     - name: clean
-  #       shell: bash -l {0}
-  #       run: |
-  #         rm dist/*.${{ matrix.clean-artifacts }}
+      - name: download (dist)
+        uses: actions/download-artifact@v3
+        with:
+          name: jupyterlab-fonts-${{ github.run_number }}-dist
+          path: ./dist
 
-  #     - name: install
-  #       shell: bash -l {0}
-  #       run: |
-  #         python -m pip install -vv --no-index --no-deps --ignore-installed --find-links=dist jupyterlab-fonts
+      - name: test (pytest)
+        run: doit test:pytest || doit list
 
-  #     - name: check (ext)
-  #       shell: bash -l {0}
-  #       run: |
-  #         jupyter labextension list
-  #         jupyter labextension list 2>&1 | grep -ie "@deathbeds/jupyterlab-font.*enabled.*ok.*python.*jupyterlab-fonts" -
+      - name: test (pytest, retry)
+        run: doit test:pytest
 
-  #     - name: test (pytest)
-  #       shell: bash -l {0}
-  #       run: doit test:pytest
+      - name: test (robot)
+        run: doit test || doit list
 
-  #     - name: test (robot)
-  #       shell: bash -l {0}
-  #       run: doit test || doit test || doit test
+      - name: test (robot, retry)
+        run: doit test
 
-  #     - name: upload (reports)
-  #       if: always()
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: |
-  #           jupyterlab-fonts-${{ github.run_number }}-reports-${{ runner.os }}-f${{ matrix.python-version }}
-  #         path: ./build/reports
+      - name: upload (reports)
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: |
+            jupyterlab-fonts-${{ github.run_number }}-reports-${{ runner.os }}-f${{ matrix.python-version }}
+          path: ./build/reports
