--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ PY_NAME = ":get::toml::pyproject.toml::project::name"
 PY_VERSION = ":get::toml::pyproject.toml::project::version"
 # locks
 DEFAULT_PY = "3.11"
+TESTING_IN_CI = "0"
 THIS_PY = "3.11"
 THIS_SUBDIR = "linux-64"
 
@@ -190,6 +191,7 @@ targets = ["::git_info"]
 [tool.doitoml.tasks.dist.flit]
 actions = [["::conda_run_build", "flit", "build"]]
 file_dep = ["::js-*::dist_pkg_json", "::all_py_src", "::ppt", "::license", "::readme", "::git_info"]
+meta = {doitoml = {skip = {any = ["${TESTING_IN_CI}"]}}}
 targets = ["::wheel", "::sdist"]
 
 [tool.doitoml.tasks.dist.hash]
