fix editor panels on nb7

--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -76,6 +76,7 @@
             ]
           ],
           "file_dep": [
+            "package.json",
             "::all_style",
             "::js-root::tsbuildinfo",
             "::js-root::yarn_history"
