--- a/packages/jupyterlab-font-anonymous-pro/package.json
+++ b/packages/jupyterlab-font-anonymous-pro/package.json
@@ -75,6 +75,7 @@
             ]
           ],
           "file_dep": [
+            "package.json",
             "::all_style",
             "::js-root::tsbuildinfo",
             "::js-root::yarn_history"
