--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
     "build": "yarn build:schema && lerna run prebuild && yarn build:ts",
     "build:schema": "lerna run build:schema",
@@ -18,32 +15,13 @@
     "watch": "cd packages/_meta && tsc -b -w",
     "watch:schema": "yarn lerna run watch:schema --parallel"
   },
-  "prettier": {
-    "printWidth": 88,
-    "proseWrap": "always",
-    "semi": true,
-    "singleQuote": true
-  },
-  "nyc": {
-    "all": true,
-    "extends": "@istanbuljs/nyc-config-typescript",
-    "extension": [
-      ".js",
-      ".jsx",
-      ".ts",
-      ".tsx"
-    ],
-    "reporter": [
-      "lcov",
-      "html",
-      "text",
-      "text-summary"
-    ],
-    "require": [
-      "ts-node/register",
-      "source-map-support/register"
-    ],
-    "skip-full": true
+  "workspaces": [
+    "packages/*"
+  ],
+  "resolutions": {
+    "http-cache-semantics": "^4.1.1",
+    "json5": "^2.2.3",
+    "webpack": "^5.76.1"
   },
   "devDependencies": {
     "@ephesoft/webpack.istanbul.loader": "^2.2.0",
@@ -59,6 +37,7 @@
     "lerna": "^7.1.5",
     "nyc": "^15.1.0",
     "prettier": "^3.0.2",
+    "prettier-package-json": "^2.8.0",
     "raw-loader": "^4.0.2",
     "source-map-loader": "^4.0.1",
     "ts-node": "^10.9.1",
@@ -235,6 +214,19 @@
         }
       },
       "fix": {
+        "prettier-package-json": {
+          "actions": [
+            [
+              "::jlpm",
+              "prettier-package-json",
+              "--write",
+              "::all_pj"
+            ]
+          ],
+          "file_dep": [
+            "::all_pj"
+          ]
+        },
         "prettier": {
           "actions": [
             [
@@ -301,5 +293,32 @@
         }
       }
     }
+  },
+  "nyc": {
+    "all": true,
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "extension": [
+      ".js",
+      ".jsx",
+      ".ts",
+      ".tsx"
+    ],
+    "reporter": [
+      "lcov",
+      "html",
+      "text",
+      "text-summary"
+    ],
+    "require": [
+      "ts-node/register",
+      "source-map-support/register"
+    ],
+    "skip-full": true
+  },
+  "prettier": {
+    "printWidth": 88,
+    "proseWrap": "always",
+    "semi": true,
+    "singleQuote": true
   }
 }
