--- a/packages/_meta/package.json
+++ b/packages/_meta/package.json
@@ -3,7 +3,8 @@
   "name": "@deathbeds/meta-jupyterlab-fonts",
   "version": "3.0.0.alpha0",
   "scripts": {
-    "build": "tsc -b",
+    "build": "tsc -b --sourceMap",
+    "build:cov": "tsc -b --inlineSourceMap",
     "watch": "yarn build --watch --preserveWatchOutput"
   },
   "devDependencies": {
