--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -54,10 +54,32 @@
       ],
       "dist_pkg_json": [
         "../../src/jupyterlab_fonts/_d/share/jupyter/labextensions/@deathbeds/jupyterlab-font-dejavu-sans-mono/package.json"
+      ],
+      "prebuild_targets": [
+        "style/fonts/DejaVuSansMono-Bold.woff2",
+        "style/fonts/DejaVuSansMono.woff2"
+      ],
+      "prebuild_deps": [
+        "scripts/convert.py"
       ]
     },
     "tasks": {
       "build": {
+        "pre": {
+          "actions": [
+            [
+              "::js-root::jlpm",
+              "prebuild"
+            ]
+          ],
+          "file_dep": [
+            "::prebuild_deps",
+            "::js-root::yarn_history"
+          ],
+          "targets": [
+            "::prebuild_targets"
+          ]
+        },
         "ext": {
           "actions": [
             [
@@ -68,7 +90,8 @@
             "package.json",
             "::all_style",
             "::js-root::tsbuildinfo",
-            "::js-root::yarn_history"
+            "::js-root::yarn_history",
+            "::prebuild_targets"
           ],
           "targets": [
             "::dist_pkg_json"
