--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -1,36 +1,13 @@
-name: jupyterlab-fonts-dev
-
 channels:
   - conda-forge
-
+  - nodefaults
 dependencies:
-  # run
-  - jupyterlab >=3.4.8,<4
-  - python >=3.7,<3.11
-  # build
-  - brotlipy
-  - doit-with-toml
-  - fonttools
-  - nodejs >=18,<19
-  - pip
-  - twine
-  - wheel
-  # qa
-  - black
-  - flake8
-  - isort
-  # - ssort # only works on py3.8+
-  # utest
-  - pytest-cov
-  - pytest-html
-  # atest
-  - firefox =102
-  - geckodriver
-  - robotframework >=6
-  - robotframework-jupyterlibrary >=0.4.1
-  - robotframework-pabot
-  - robotframework-robocop >=2.6.0
-  - robotframework-tidy >=3.3.1
-  # demo toys
-  - jupyterlab-link-share
-  - ipywidgets
+  - conda <22.11.1
+  - conda-lock >=2.1.2,<2.2
+  - doitoml-with-all
+  - jupyter-collaboration
+  - jupyterlab >=4,<5
+  - mamba
+  - notebook >=7,<8
+  - python ==3.11.*
+  - python-dotenv
