--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -47,7 +47,7 @@
         "../../dist/deathbeds-jupyterlab-font-dejavu-sans-mono-${JLF_VERSION}.tgz"
       ],
       "all_style": [
-        ":rglob::style::*.*"
+        "::prebuild_targets"
       ],
       "here": [
         "."
