more binder, readme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -168,6 +168,18 @@ actions = [
     "::labext_disable",
     "::labext_binder_ext",
   ],
+  [
+    "rm",
+    "-rf",
+    ".envs/",
+    "node_modules/",
+    "build",
+  ],
+  [
+    "mamba",
+    "clean",
+    "-yaf",
+  ],
 ]
 doc = "perform editable install in binder"
 file_dep = ["::js-*::dist_pkg_json"]
