--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -2,13 +2,13 @@ channels:
   - conda-forge
   - nodefaults
 dependencies:
-  - conda <22.11.1
-  - conda-lock >=2.1.2,<2.2
-  - doitoml-with-all
-  - jupyter-collaboration
-  - jupyterlab >=4,<5
-  - mamba
-  - notebook >=7,<8
-  - python ==3.11.*
-  - python-dotenv
+  - brotlipy
   - flit >=3.9.0,<4
+  - fonttools
+  - jupyterhub-singleuser
+  - jupyterlab >=4.0,<5
+  - nodejs >=18,<19
+  - notebook >=7,<8
+  - pip
+  - python ==3.11.*
+  - twine >=3.7.1
